# rag-adk-vertex-ai

./: .gitignore  .gitlab-ci.yml  README.md  dev.example.nix  pyproject.toml
.idx/: dev.nix.example
rag/: __init__.py  agent.py
rag/config/: __init__.py
rag/tools/: __init__.py  corpus_tools.py  storage_tools.py
tests/sandbox/: test_agent.py  test_corpus_tools.py  test_storage_tools.py
